Bug 331613 - Tables not sorted when importing from CSV to an existing table
Summary: Tables not sorted when importing from CSV to an existing table
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.7.5
Platform: Mint (Ubuntu based) All
: NOR minor
Target Milestone: ---
Assignee: Radosław Wicik
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-02-28 13:37 UTC by robert leleu
Modified: 2014-03-19 10:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert leleu 2014-02-28 13:37:38 UTC
When importing from CSV to an existing table, the list of existing tables ii not ordered, and cannot be ordered.

Reproducible: Always

Steps to Reproduce:

2.
3.
Comment 1 Jarosław Staniek 2014-03-03 23:16:35 UTC
Confirmed. Header for sorting would be also useful.
Comment 2 Radosław Wicik 2014-03-04 21:39:27 UTC
If any one have some samples please attache them.
Comment 3 Jarosław Staniek 2014-03-04 22:06:57 UTC
Steps: 
1. Open database with quite a few tables (needed so you'll see they're not ordered).
2. Import any csv file, eg this 2-line file:

1 a b
2 c d

3. Start importing it again into the same table.

PS: any patches go to http://git.reviewboard.kde.org first.
Comment 4 Radosław Wicik 2014-03-10 22:49:34 UTC
Git commit 0564a7a0c875c3c967f1fb5edc615c6c3fdc5b81 by Radoslaw Wicik.
Committed on 09/03/2014 at 17:29.
Pushed by wicik into branch 'master'.

Sort part items also when just one part was loaded

This fixes sorting tables in the CSV import dialog.
REVIEW:116683

M  +1    -1    kexi/widget/navigator/KexiProjectModel.cpp

http://commits.kde.org/calligra/0564a7a0c875c3c967f1fb5edc615c6c3fdc5b81
Comment 5 Radosław Wicik 2014-03-10 23:16:08 UTC
Git commit e24a4f354566886b5d406fdcc573cec848aece0e by Radoslaw Wicik.
Committed on 09/03/2014 at 17:29.
Pushed by wicik into branch 'calligra/2.8'.

Sort part items also when just one part was loaded

This fixes sorting tables in the CSV import dialog.
REVIEW:116683

M  +1    -1    kexi/widget/navigator/KexiProjectModel.cpp

http://commits.kde.org/calligra/e24a4f354566886b5d406fdcc573cec848aece0e