Sort part items also when just one part was loaded

This fixes sorting tables in the CSV import dialog.

BUG:331613
REVIEW:116683